@@ -33,11 +33,17 @@ description = Check XML validity
 #priority    = 1
 #description = Check if complete file is a valid gzip file
 
+[verifyandroidxml]
+type        = prerun
+module      = bat.prerun
+method      = verifyAndroidXML
+priority    = 1
+description = Check if file is an Android binary XML file
 [verifytext]
 type        = prerun
 module      = bat.prerun
 method      = verifyText
-priority    = 2
+priority    = 3
 description = Check if file contains just ASCII text
 
 [verifygraphics]
@@ -45,7 +51,7 @@ type        = prerun
 module      = bat.prerun
 method      = verifyGraphics
 magic       = bmp
-priority    = 1
+priority    = 2
 description = Check if file is a valid graphics file, or consists of just graphics files
 
 ####################
